# backend-practice-rbvs

./: .gitignore  README.md  pyproject.toml
mealdelivery/: .pre-commit-config.yaml  celerybeat-schedule  db.sqlite3  manage.py
mealdelivery/employees/: models.py  tests.py  urls.py  views.py
mealdelivery/employees/migrations/: 0001_initial.py
mealdelivery/employees/templates/employees/: detail.html  index.html
mealdelivery/mealdelivery/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mealdelivery/menus/: forms.py  models.py  tests.py  urls.py  views.py
mealdelivery/menus/migrations/: 0001_initial.py  0002_alter_menu_created.py  0003_delete_option.py  0004_menulinkperemployee.py  0005_menu_date_menu.py
mealdelivery/menus/templates/menus/: detail.html  index.html  link.html  select.html  update.html
mealdelivery/notifications/: tasks.py  utils.py
mealdelivery/notifications/management/commands/: send_notification.py
mealdelivery/options/: forms.py  models.py  tests.py  urls.py  views.py
mealdelivery/options/migrations/: 0001_initial.py  0002_option_created.py  0003_rename_option_option_name.py  0004_employeeoption.py  0005_employeeoption_specification.py  0006_employeeoption_created.py
mealdelivery/options/templates/options/: create.html  detail.html
