[tool.poetry]
name = "backend-test-rbvs"
version = "0.1.0"
description = ""
authors = ["Ramiro Baltazar Vazquez Sanchez <ramirovazquez95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
